monitoring/kube-prometheus-stack/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/target: traefik.kube.katralis.net
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.katralis.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
